Add grid and type to styling

--- a/index.html
+++ b/index.html
@@ -233,3 +233,75 @@
               <input type="checkbox" id="atvs">
               <label for="atvs">ATVs</label>
             </div>
+
+            <div class="pad-t-1-8 pad-b-1-8">
+              <input type="checkbox" id="plant-identification">
+              <label for="plant-identification">Plant identification</label>
+            </div>
+
+            <div class="pad-t-1-8 pad-b-1-8">
+              <input type="checkbox" id="special-event-planning">
+              <label for="special-event-planning">Special event planning</label>
+            </div>
+
+            <div class="pad-t-1-8 pad-b-1-8">
+              <input type="checkbox" id="speaking-to-groups">
+              <label for="speaking-to-groups">Speaking to groups</label>
+            </div>
+          </div>
+        </div>
+      </fieldset>
+
+      <div class="gutter-1-2">
+        <hr class="push-2">
+      </div>
+
+      <fieldset class="pad-t-1-2 push-2">
+        <legend class="gutter-1-2 giga">Do you have a valid driver’s license?</legend>
+
+        <div class="inline-block pad-t-1-8 pad-b-1-8 gutter-1-2 push-r-1-2">
+          <input type="radio" id="license-yes" name="license" required>
+          <label for="license-yes">Yes</label>
+        </div>
+
+        <div class="inline-block pad-t-1-8 pad-b-1-8 gutter-1-2 ">
+          <input type="radio" id="license-no" name="license" required>
+          <label for="license-no">No</label>
+        </div>
+      </fieldset>
+
+      <fieldset class="pad-t-1-2 push-2">
+        <legend class="gutter-1-2 giga">Do you have a pick-up truck you’d be willing to use?</legend>
+
+        <div class="inline-block pad-t-1-8 pad-b-1-8 gutter-1-2 push-r-1-2">
+          <input type="radio" id="truck-yes" name="truck" required>
+          <label for="truck-yes">Yes</label>
+        </div>
+
+        <div class="inline-block pad-t-1-8 pad-b-1-8 gutter-1-2">
+          <input type="radio" id="truck-no" name="truck" required>
+          <label for="truck-no">No</label>
+        </div>
+      </fieldset>
+
+      <fieldset class="pad-t-1-2 push-2">
+        <legend class="gutter-1-2 giga">Do you have up-to-date first-aid certification?</legend>
+
+        <div class="inline-block pad-t-1-8 pad-b-1-8 gutter-1-2 push-r-1-2">
+          <input type="radio" id="first-aid-yes" name="first-aid" required>
+          <label for="first-aid-yes">Yes</label>
+        </div>
+
+        <div class="inline-block pad-t-1-8 pad-b-1-8 gutter-1-2">
+          <input type="radio" id="first-aid-no" name="first-aid" required>
+          <label for="first-aid-no">No</label>
+        </div>
+      </fieldset>
+      <div class="gutter-1-2">
+        <hr class="push-2">
+      </div>
+
+      <div class="push-2 gutter-1-2">
+        <label for="comments" class="push-1-2 giga bold">Please let us know any comments or questions you may have. <em class="flag-optional">(optional)</em></label>
+        <textarea id="comments"></textarea>
+      </div>
