Add footer to website

--- a/index.html
+++ b/index.html
@@ -305,3 +305,25 @@
         <label for="comments" class="push-1-2 giga bold">Please let us know any comments or questions you may have. <em class="flag-optional">(optional)</em></label>
         <textarea id="comments"></textarea>
       </div>
+
+
+
+
+      <div class="gutter-1-2">
+    <hr class="push-2">
+  </div>
+
+  <div class="gutter-1-2 text-center">
+    <button class="btn giga gutter-2" type="submit">Apply</button>
+  </div>
+</form>
+</div>
+
+<footer class="pad-t pad-b section-primary">
+<div class="wrapper gutter-1-2">
+  <p class="push-0 milli">© Tree Hugger International Organization</p>
+</div>
+</footer>
+
+</body>
+</html>
